--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.11.0",
     "echarts": "^5.6.0",
     "naive-ui": "^2.42.0",
     "pinia": "^3.0.3",
